feature: organization create, list

--- a/translations/validators.ru.yaml
+++ b/translations/validators.ru.yaml
@@ -6,3 +6,5 @@
     '': 'Пользователь не найден.'
 'User verification failed':
     '': 'Верификация пользователя не пройдена.'
+'Organization already exists':
+    '': 'Организация уже существует.'
